build library when add to node_modules

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "artifacts": "napi artifacts",
     "build": "napi build --platform --release",
     "build:debug": "napi build --platform",
+    "postinstall": "npm run build",
     "prepublishOnly": "napi prepublish -t npm",
     "test": "ava",
     "universal": "napi universal",
