--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 edition = "2021"
-name = "pdq"
+name = "sensource_pdq"
 version = "0.0.0"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-hex = "0.4.3"
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
 napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
 napi-derive = "2.12.2"
@@ -18,3 +17,4 @@ napi-build = "2.0.1"
 
 [profile.release]
 lto = true
+strip = "symbols"
